Fix carousel responsiveness - large screens not fitting

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,8 @@
 /* Carousel */
-.carousel-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .carousel-indicators li {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-}
-
-/* Feature Large */
-
-.feature-portrait-image {
-  height: 380px;
-  background-size: contain;
-  background-repeat: round;
-}
-
-.feature-blured-background {
-  background-repeat: round;
 }
 
 /* Features */
